--- a/public/files/remark_ANTH529_2016-02-15.html
+++ b/public/files/remark_ANTH529_2016-02-15.html
@@ -67,7 +67,7 @@ class: center, middle
 
 1. The abstract begins, "Adaptation is a process of deliberate change..." Is this always the case? If unintentional societal change results in adaptation, is it still adaptation?
 1. Does system transformation also have to be "deliberate" or "inadvertent" (p400)?
-1. In biology, adaptation is never purposeful or directed. Whether a trait is "adaptive" depends wholly on the state of the environment at that particular time and, when environmental conditions change, the relative fitness benefits of traits change, which may result in different traits being "adaptive." Is this also the case with social systems, or are humans in control of their own socio-ecological evolution?
+1. In evolutionary biology, adaptation is never purposeful or directed. Whether a trait is "adaptive" depends wholly on the state of the environment at that particular time and, when environmental conditions change, the relative fitness benefits of traits change, which may result in different traits being "adaptive." Is this also the case with social systems, or are humans in control of their own socio-ecological evolution?
 1. Further, the mechanisms of adaptation are the creation of random variation (*mutation*) and many, many iterations of failure (*selection*). Does social adaptation proceed differently? Why?
 
 ---
