Course materials final update before send out

--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -355,7 +355,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">NR 592</a>
+      <a class="navbar-brand" href="index.html">n(R) 592</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -383,6 +383,8 @@ COURSE SCHEDULE</div></h1>
 <h4 class="author"><em><div style="white-space: pre-line;"> 
 Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
+ 
+Last Updated: 2019-02-21
  </div></em></h4>
 
 </div>
@@ -427,7 +429,7 @@ Richard E.W. Berl</div></em></h4>
 <li><p>Navarro, D. Section 2.1: Introduction to psychological measurement through Section 2.2: Scales of measurement. In <em>Learning statistics with R</em>. Available: <a href="https://learningstatisticswithr.com/book/studydesign.html" class="uri">https://learningstatisticswithr.com/book/studydesign.html</a></p></li>
 <li><p>Wickham, H. Welcome through Section 3: Functions. In <em>The tidyverse style guide</em>. Available: <a href="https://style.tidyverse.org/" class="uri">https://style.tidyverse.org/</a></p>
 <ul>
-<li>Skim and refer back later when writing scripts</li>
+<li>Skim and refer back later when writing code</li>
 </ul></li>
 </ol></li>
 </ol>
@@ -455,10 +457,11 @@ Richard E.W. Berl</div></em></h4>
 </ul>
 <p><strong>Git &amp; GitHub</strong></p>
 <ul>
-<li><p>Bryan, J., et al. Happy Git and GitHub for the useR. Available: <a href="https://happygitwithr.com/index.html" class="uri">https://happygitwithr.com/index.html</a></p></li>
+<li><p>Bryan, J., et al. Happy Git and GitHub for the useR. Available: <a href="https://happygitwithr.com/" class="uri">https://happygitwithr.com/</a></p></li>
 <li><p>FitzJohn, R., &amp; Falster, D. Nice R code: Introduction to version control using git. Available: <a href="https://nicercode.github.io/git/" class="uri">https://nicercode.github.io/git/</a></p></li>
 <li><p>GitHub Guides. Git handbook. Available: <a href="https://guides.github.com/introduction/git-handbook/" class="uri">https://guides.github.com/introduction/git-handbook/</a></p></li>
 <li><p>GitHub. GitHub Desktop. Available: <a href="https://desktop.github.com/" class="uri">https://desktop.github.com/</a></p></li>
+<li><p>Zabor, E. C. Creating websites in R. Available: <a href="https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html" class="uri">https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html</a></p></li>
 </ul>
 <p><br></p>
 </div>
@@ -478,7 +481,7 @@ Richard E.W. Berl</div></em></h4>
 <li><p><strong>Required Reading</strong></p>
 <ol style="list-style-type: lower-alpha">
 <li><p>Wickham, H. (2014). Tidy data. Journal of Statistical Software, 59(10), 1-23. doi: <a href="https://www.jstatsoft.org/article/view/v059i10">10.18637/jss.v059.i10</a></p></li>
-<li><p>Tukey, J. W. (1977). Preface. In <em>Exploratory data analysis</em> (pp. v-ix). Reading, MA: Addison-Wesley. Available: <a href="/materials/tukey1977preface.pdf">here</a></p></li>
+<li><p>Tukey, J. W. (1977). Preface. In <em>Exploratory data analysis</em> (pp. v-ix). Reading, MA: Addison-Wesley. Available: <a href="./resources/tukey1977preface.pdf">here</a></p></li>
 </ol></li>
 <li><p><strong>Assignment 2</strong> (Due April 9)</p></li>
 </ol>
@@ -514,7 +517,7 @@ Richard E.W. Berl</div></em></h4>
 <li><p><strong>Required Reading</strong></p>
 <ol style="list-style-type: lower-alpha">
 <li><p>Healy, K. Chapter 1: Look at data. In <em>Data visualization: A practical introduction</em>. Available: <a href="https://socviz.co/lookatdata.html" class="uri">https://socviz.co/lookatdata.html</a></p></li>
-<li><p>Wilke, C. O. Telling a story and making a point. In <em>Fundamentals of data visualization</em>. Available: <a href="https://serialmentor.com/dataviz/telling-a-story.html" class="uri">https://serialmentor.com/dataviz/telling-a-story.html</a></p></li>
+<li><p>Wilke, C. O. Chapter 29: Telling a story and making a point. In <em>Fundamentals of data visualization</em>. Available: <a href="https://serialmentor.com/dataviz/telling-a-story.html" class="uri">https://serialmentor.com/dataviz/telling-a-story.html</a></p></li>
 </ol></li>
 <li><p><strong>Assignment 3</strong> (Due April 16)</p></li>
 <li><p>Start thinking about <strong>Project Proposal</strong> (Due April 23)</p></li>
@@ -644,19 +647,29 @@ Richard E.W. Berl</div></em></h4>
 <div id="homework-7" class="section level3">
 <h3>Homework</h3>
 <ol style="list-style-type: decimal">
-<li><p><strong>Required Reading</strong></p></li>
+<li><p><strong>Required Reading</strong></p>
+<ol style="list-style-type: lower-alpha">
+<li>rOpenSci. Introduction. In <em>Reproducibility in science</em>. Available: <a href="https://ropensci.github.io/reproducibility-guide/sections/introduction/" class="uri">https://ropensci.github.io/reproducibility-guide/sections/introduction/</a></li>
+</ol></li>
 <li><p><strong>Project Report</strong> (Due May 17, 11:59pm)</p></li>
 <li><p><strong>Project Presentation</strong> (Due week of May 13)</p></li>
 </ol>
 </div>
 <div id="resources-7" class="section level3">
 <h3>Resources</h3>
+<ul>
+<li><p>Hillier, A., Kelly, R. P., &amp; Klinger, T. (2016). Narrative style influences citation frequency in climate change science. PLOS ONE, 11(12), e0167983. doi: <a href="https://doi.org/10.1371/journal.pone.0167983">10.1371/journal.pone.0167983</a></p></li>
+<li><p>Ratliff, W. The David Attenborough style of scientific presentation. Available: <a href="https://www.dropbox.com/s/j1vv2baheiduvip/David%20Attenborough%20talk%20technique%202018.pdf">https://www.dropbox.com/s/j1vv2baheiduvip/David%20Attenborough%20talk%20technique%202018.pdf</a></p></li>
+<li><p>rOpenSci. Reproducibility in science. Available: <a href="https://ropensci.github.io/reproducibility-guide/" class="uri">https://ropensci.github.io/reproducibility-guide/</a></p></li>
+</ul>
 <p><br></p>
 </div>
 </div>
 <div id="week-8-project-presentations" class="section level2">
 <h2>Week 8: Project presentations</h2>
 <p>Meeting date and time TBD</p>
+<p><br></p>
+<p>(<a href="./schedule_spring2019.pdf">pdf</a> / <a href="./schedule_spring2019.Rmd">Rmd</a>)</p>
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;">
 
 </div>
