--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -651,6 +651,9 @@ Last Updated: 2019-02-21
 <ol style="list-style-type: lower-alpha">
 <li>rOpenSci. Introduction. In <em>Reproducibility in science</em>. Available: <a href="https://ropensci.github.io/reproducibility-guide/sections/introduction/" class="uri">https://ropensci.github.io/reproducibility-guide/sections/introduction/</a></li>
 </ol></li>
+</ol>
+<!-- end of list -->
+<ol style="list-style-type: decimal">
 <li><p><strong>Project Report</strong> (Due May 17, 11:59pm)</p></li>
 <li><p><strong>Project Presentation</strong> (Due week of May 13)</p></li>
 </ol>
