--- a/nr592/index.html
+++ b/nr592/index.html
@@ -394,8 +394,7 @@ Last Updated: 2019-02-21
 <div id="course-information" class="section level2">
 <h2>Course Information</h2>
 <p><strong>Section</strong><br />
-Seminar in Natural Resources (NR 592, Section 1)<br />
-1 credit</p>
+NR 592, Section 1: Seminar in Natural Resources (1 credit)</p>
 <p><strong>Instructor</strong><br />
 Richard E.W. Berl, Human Dimensions of Natural Resources<br />
 <em>(He/Him)</em><br />
@@ -697,6 +696,10 @@ Colorado State University does not discriminate on the basis of race, age, creed
 I acknowledge, with respect, that the land we are on today is the traditional and ancestral homelands of the Arapaho, Cheyenne, and Ute Nations and peoples. This was also a site of trade, gathering, and healing for numerous other Native tribes. I recognize the Indigenous peoples as original stewards of this land and all the relatives within it. As these words of acknowledgment are written and read, the ties Nations have to their traditional homelands are renewed and reaffirmed.</p>
 <p>CSU is founded as a land grant institution, and I accept that our mission must encompass access to education and inclusion. And, significantly, that CSU’s founding came at a dire cost to Native Nations and peoples whose land this university was built upon. This acknowledgment is the education and inclusion we must practice in recognizing our institutional history, responsibility, and commitment.</p>
 <p><em>Adapted from <a href="https://president.colostate.edu/speeches-and-writing/land-acknowledgment-at-csu-december-11-2018/">Land Acknowledgment at CSU</a> at the <a href="https://diversity.colostate.edu/">Office of the Vice President for Diversity</a>.</em></p>
+<p><br></p>
+<center>
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Material for this course is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+</center>
 <p><br></p>
 <p>(<a href="./syllabus_spring2019.pdf">pdf</a> / <a href="./syllabus_spring2019.Rmd">Rmd</a>)</p>
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;">
