--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -384,7 +384,7 @@ COURSE SCHEDULE</div></h1>
 Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
-Last Updated: 2019-02-21
+Last Updated: 2019-02-22
  </div></em></h4>
 
 </div>
@@ -520,7 +520,7 @@ Last Updated: 2019-02-21
 <li><p>Wilke, C. O. Chapter 29: Telling a story and making a point. In <em>Fundamentals of data visualization</em>. Available: <a href="https://serialmentor.com/dataviz/telling-a-story.html" class="uri">https://serialmentor.com/dataviz/telling-a-story.html</a></p></li>
 </ol></li>
 <li><p><strong>Assignment 3</strong> (Due April 16)</p></li>
-<li><p>Start thinking about <strong>Project Proposal</strong> (Due April 23)</p></li>
+<li><p>Start thinking about <strong>Project Proposal</strong> (Due April 23, 11:59pm)</p></li>
 </ol>
 </div>
 <div id="resources-3" class="section level3">
@@ -563,7 +563,7 @@ Last Updated: 2019-02-21
 <li><p>Joselson, N. (2016). Eugenics and statistics, discussing Karl Pearson and R. A. Fisher. Available: <a href="https://njoselson.github.io/Fisher-Pearson/" class="uri">https://njoselson.github.io/Fisher-Pearson/</a></p></li>
 </ol></li>
 <li><p><strong>Assignment 4</strong> (Due April 23)</p></li>
-<li><p><strong>Project Proposal</strong> (Due April 23)</p></li>
+<li><p><strong>Project Proposal</strong> (Due April 23, 11:59pm)</p></li>
 </ol>
 </div>
 <div id="resources-4" class="section level3">
@@ -671,7 +671,7 @@ Last Updated: 2019-02-21
 <div id="week-8-project-presentations" class="section level2">
 <h2>Week 8: Project presentations</h2>
 <p>Meeting date and time TBD</p>
-<p><br></p>
+<p><br><br></p>
 <p>(<a href="./schedule_spring2019.pdf">pdf</a> / <a href="./schedule_spring2019.Rmd">Rmd</a>)</p>
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;">
 
