--- a/nr592/syllabus_spring2019.html
+++ b/nr592/syllabus_spring2019.html
@@ -385,7 +385,7 @@ SYLLABUS</div></h1>
 Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
-Last Updated: 2019-02-21
+Last Updated: 2019-02-22
  </div></em></h4>
 
 </div>
@@ -427,7 +427,7 @@ In this course, you will learn how to program using the R statistical environmen
 <div id="course-materials" class="section level2">
 <h2>Course Materials</h2>
 <p><strong>Prerequisites</strong><br />
-This course is open to graduate students only. There are no prerequisites, but it is expected that students have had some exposure to statistics.</p>
+This course is open to graduate students only. There are no prerequisite courses, but it is expected that students have had some exposure to statistics.</p>
 <p><strong>Time Commitment</strong><br />
 The work load of this course is equivalent to a full semester 1-credit course, squeezed into half a semester of time. That means we will meet for 2 hours per week and you should expect to spend an average of 4 to 6 hours of time per week outside of class to accomplish class readings and assignments (per the <a href="http://catalog.colostate.edu/general-catalog/academic-standards/academic-credit/">CSU Catalog</a>).</p>
 <p><strong>Texts and Resources</strong><br />
@@ -477,7 +477,7 @@ There are no required texts for you to purchase. We will utilize a variety of fr
 <p><strong>See the <a href="./schedule_spring2019.html">Course Schedule</a> page for details.</strong></p>
 <p>Lecture notes will be made available by the end of the day of class. They will not be exhaustive, so students should plan to attend class and take their own notes while working along.</p>
 <p>Required reading should be done by the second class meeting (Thursday) of the week in which it is listed.</p>
-<p>Weekly homework assignments are due by the first class meeting (Tuesday) following the week in which they are listed. Due dates for each assignment are listed on the <a href="./schedule_spring2019.html">Course Schedule</a>.</p>
+<p>Weekly homework assignments are due by the beginning of the first class meeting (Tuesday at 10:00am) following the week in which they are listed. Due dates for each assignment are listed on the <a href="./schedule_spring2019.html">Course Schedule</a>.</p>
 <p>All assignments, the project proposal, and the project report should be submitted through <a href="https://colostate.instructure.com/courses/83430/assignments">Canvas</a>. Assignment submissions should include your R script (*.R) or R Markdown (*.Rmd) file, as well as any other files specified in the assignment.</p>
 <p><br></p>
 </div>
@@ -508,7 +508,7 @@ Homework Assignments (x6)
 10% each, drop lowest (50% total)
 </td>
 <td style="text-align:left;">
-Weekly (see <a href="/schedule_spring2019.html">Course Schedule</a>)
+Weekly, 10:00am (see <a href="/schedule_spring2019.html">Course Schedule</a>)
 </td>
 </tr>
 <tr>
@@ -519,7 +519,7 @@ Project Proposal
 5%
 </td>
 <td style="text-align:left;">
-April 23
+April 23, 11:59pm
 </td>
 </tr>
 <tr>
@@ -700,7 +700,7 @@ I acknowledge, with respect, that the land we are on today is the traditional an
 <center>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Material for this course is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 </center>
-<p><br></p>
+<p><br><br></p>
 <p>(<a href="./syllabus_spring2019.pdf">pdf</a> / <a href="./syllabus_spring2019.Rmd">Rmd</a>)</p>
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;">
 
