--- a/nr592/syllabus_spring2019.html
+++ b/nr592/syllabus_spring2019.html
@@ -385,7 +385,7 @@ SYLLABUS</div></h1>
 Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
-Last Updated: 2019-02-22
+Last Updated: 2019-03-05
  </div></em></h4>
 
 </div>
@@ -404,7 +404,7 @@ Forestry 201<br />
 <p><strong>Website</strong><br />
 <a href="https://rewberl.github.io/nr592/" class="uri">https://rewberl.github.io/nr592/</a></p>
 <p><strong>Meeting Times</strong><br />
-Tuesdays and Thursdays, 10:00am - 10:50am, location TBD<br />
+Tuesdays and Thursdays, 10:00am - 10:50am, Animal Science 31<br />
 Office hours by appointment</p>
 <p><strong>Overview</strong><br />
 In this course, you will learn how to program using the R statistical environment and become proficient in performing statistical analyses and data visualizations using real data relevant to your own research.</p>
