Add Lecture 1 to schedule

--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -416,7 +416,7 @@ Last Updated: 2019-03-25
 <div id="lectures" class="section level3">
 <h3>Lectures</h3>
 <ul>
-<li><p>Tuesday, March 26: <strong>Lecture 01</strong> (pdf / Rmd)</p></li>
+<li><p>Tuesday, March 26: <strong><a href="./lectures/lecture01.html">Lecture 01</a></strong> (<a href="./lectures/lecture01.pdf">pdf</a> / <a href="./lectures/lecture01.Rmd">Rmd</a>)</p></li>
 <li><p>Thursday, March 28: <strong>Lecture 02</strong> (pdf / Rmd)</p></li>
 </ul>
 </div>
