--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -384,7 +384,7 @@ COURSE SCHEDULE</div></h1>
 Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
-Last Updated: 2019-03-28
+Last Updated: 2019-04-02
  </div></em></h4>
 
 </div>
@@ -472,8 +472,15 @@ Last Updated: 2019-03-28
 <div id="lectures-1" class="section level3">
 <h3>Lectures</h3>
 <ul>
-<li><p>Tuesday, April 2: <strong>Lecture 03</strong> (pdf / Rmd)</p></li>
-<li><p>Thursday, April 4: <strong>Lecture 04</strong> (pdf / Rmd)</p></li>
+<li>Tuesday, April 2: <strong>Lecture 03</strong> (pdf / Rmd)
+<ul>
+<li><a href="https://osf.io/s7d9d/">Gombe data</a><br />
+</li>
+<li><a href="http://www.randomservices.org/random/data/HorseKicks.html">Prussian horse-kick data</a><br />
+</li>
+<li><a href="https://royalsocietypublishing.org/doi/suppl/10.1098/rsos.150645">Indo-European folktale data</a></li>
+</ul></li>
+<li>Thursday, April 4: <strong>Lecture 04</strong> (pdf / Rmd)</li>
 </ul>
 </div>
 <div id="homework-2" class="section level3">
@@ -630,6 +637,7 @@ Last Updated: 2019-03-28
 <p><strong>Social Network Analysis</strong></p>
 <p><strong>Ecological Analyses</strong></p>
 <p>Diversity Indices</p>
+<p><code>diverse</code> package</p>
 <p>Accumulation Curves</p>
 <p><strong>Geospatial Mapping</strong></p>
 <ul>
