Update lecture files

--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -384,7 +384,7 @@ COURSE SCHEDULE</div></h1>
 Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
-Last Updated: 2019-04-02
+Last Updated: 2019-04-04
  </div></em></h4>
 
 </div>
@@ -472,7 +472,7 @@ Last Updated: 2019-04-02
 <div id="lectures-1" class="section level3">
 <h3>Lectures</h3>
 <ul>
-<li>Tuesday, April 2: <strong>Lecture 03</strong> (pdf / Rmd)
+<li>Tuesday, April 2: <strong><a href="./lectures/lecture03.html">Lecture 03</a></strong> (<a href="./lectures/lecture03.pdf">pdf</a> / <a href="./lectures/lecture03.Rmd">Rmd</a>)
 <ul>
 <li><a href="https://osf.io/s7d9d/">Gombe data</a><br />
 </li>
@@ -480,8 +480,15 @@ Last Updated: 2019-04-02
 </li>
 <li><a href="https://royalsocietypublishing.org/doi/suppl/10.1098/rsos.150645">Indo-European folktale data</a></li>
 </ul></li>
-<li>Thursday, April 4: <strong>Lecture 04</strong> (pdf / Rmd)</li>
 </ul>
+<!-- end of list -->
+<ul>
+<li>Thursday, April 4: <strong>Lecture 04</strong> (pdf / Rmd)
+<ul>
+<li><a href="https://opendata.fcgov.com/Neighborhood-Livability-and-Social-Health/Fort-Collins-Shelter-Service-Data/u8nn-nj59">Fort Collins shelter service data</a></li>
+</ul></li>
+</ul>
+<!-- end of list -->
 </div>
 <div id="homework-2" class="section level3">
 <h3>Homework</h3>
@@ -495,7 +502,7 @@ Last Updated: 2019-04-02
 </ul></li>
 <li><p>Tukey, J. W. (1977). Preface. In <em>Exploratory data analysis</em> (pp. v-ix). Reading, MA: Addison-Wesley. Available: <a href="./resources/tukey1977preface.pdf">here (pdf)</a></p></li>
 </ol></li>
-<li><p><strong>Assignment 2</strong> (Due April 9)</p></li>
+<li><p><strong><a href="./assignments/assignment2.html">Assignment 2</a></strong> (<a href="./assignments/assignment2.pdf">pdf</a> / <a href="./assignments/assignment2.Rmd">Rmd</a>) (Due April 9)</p></li>
 </ol>
 </div>
 <div id="resources-2" class="section level3">
@@ -515,7 +522,9 @@ Last Updated: 2019-04-02
 </ul>
 <p><strong>Problems with Data</strong></p>
 <ul>
+<li><p>Navarro, D. Section 5.8: Handling missing values. In <em>Learning statistics with R</em>. Available: <a href="https://learningstatisticswithr.com/book/descriptives.html#missing" class="uri">https://learningstatisticswithr.com/book/descriptives.html#missing</a></p></li>
 <li><p>van Buuren, S. Section 1.1: The problem of missing data, through Section 1.4: Multiple imputation in a nutshell. In <em>Flexible imputation of missing data</em>. Available: <a href="https://stefvanbuuren.name/fimd/sec-problem.html" class="uri">https://stefvanbuuren.name/fimd/sec-problem.html</a></p></li>
+<li><p>Prabhakaran, S. Outlier treatment. In <em>r-statistics.co</em>. Available: <a href="http://r-statistics.co/Outlier-Treatment-With-R.html" class="uri">http://r-statistics.co/Outlier-Treatment-With-R.html</a></p></li>
 <li><p>Navarro, D. Section 2.7: Confounds, artifacts and other threats to validity. In <em>Learning statistics with R</em>. Available: <a href="https://learningstatisticswithr.com/book/studydesign.html#confounds-artifacts-and-other-threats-to-validity" class="uri">https://learningstatisticswithr.com/book/studydesign.html#confounds-artifacts-and-other-threats-to-validity</a></p></li>
 <li><p>McDonald, J. H. Confounding variables. In <em>Handbook of biological statistics</em>. Available: <a href="http://www.biostathandbook.com/confounding.html" class="uri">http://www.biostathandbook.com/confounding.html</a></p></li>
 </ul>
