--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -483,7 +483,7 @@ Last Updated: 2019-04-04
 </ul>
 <!-- end of list -->
 <ul>
-<li>Thursday, April 4: <strong>Lecture 04</strong> (pdf / Rmd)
+<li>Thursday, April 4: <strong><a href="./lectures/lecture04.html">Lecture 04</a></strong> (<a href="./lectures/lecture04.pdf">pdf</a> / <a href="./lectures/lecture04.Rmd">Rmd</a>)
 <ul>
 <li><a href="https://opendata.fcgov.com/Neighborhood-Livability-and-Social-Health/Fort-Collins-Shelter-Service-Data/u8nn-nj59">Fort Collins shelter service data</a></li>
 </ul></li>
