--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -384,8 +384,8 @@ COURSE SCHEDULE</div></h1>
 Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
-Last Updated: 2019-04-08
- </div></em></h4>
+ 
+Last Updated: 2019-04-09</div></em></h4>
 
 </div>
 
@@ -552,7 +552,7 @@ Last Updated: 2019-04-08
 <li><p>Healy, K. Chapter 1: Look at data. In <em>Data visualization: A practical introduction</em>. Available: <a href="https://socviz.co/lookatdata.html" class="uri">https://socviz.co/lookatdata.html</a></p></li>
 <li><p>Wilke, C. O. Chapter 29: Telling a story and making a point. In <em>Fundamentals of data visualization</em>. Available: <a href="https://serialmentor.com/dataviz/telling-a-story.html" class="uri">https://serialmentor.com/dataviz/telling-a-story.html</a></p></li>
 </ol></li>
-<li><p><strong>Assignment 3</strong> (Due April 16)</p></li>
+<li><p><strong><a href="./assignments/assignment3.html">Assignment 3</a></strong> (<a href="./assignments/assignment3.pdf">pdf</a> / <a href="./assignments/assignment3.Rmd">Rmd</a>) (Due April 16)</p></li>
 <li><p>Start thinking about <strong>Project Proposal</strong> (Due April 23, 11:59pm)</p></li>
 </ol>
 </div>
