Add Course Project description

--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -385,7 +385,7 @@ Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
  
-Last Updated: 2019-04-09</div></em></h4>
+Last Updated: 2019-04-10</div></em></h4>
 
 </div>
 
@@ -553,7 +553,7 @@ Last Updated: 2019-04-09</div></em></h4>
 <li><p>Wilke, C. O. Chapter 29: Telling a story and making a point. In <em>Fundamentals of data visualization</em>. Available: <a href="https://serialmentor.com/dataviz/telling-a-story.html" class="uri">https://serialmentor.com/dataviz/telling-a-story.html</a></p></li>
 </ol></li>
 <li><p><strong><a href="./assignments/assignment3.html">Assignment 3</a></strong> (<a href="./assignments/assignment3.pdf">pdf</a> / <a href="./assignments/assignment3.Rmd">Rmd</a>) (Due April 16)</p></li>
-<li><p>Start thinking about <strong>Project Proposal</strong> (Due April 23, 11:59pm)</p></li>
+<li><p>Start thinking about <strong><a href="./assignments/course_project.html">Project Proposal</a></strong> (Due April 23, 11:59pm)</p></li>
 </ol>
 </div>
 <div id="resources-3" class="section level3">
@@ -598,7 +598,7 @@ Last Updated: 2019-04-09</div></em></h4>
 <li><p>Joselson, N. (2016). Eugenics and statistics, discussing Karl Pearson and R. A. Fisher. Available: <a href="https://njoselson.github.io/Fisher-Pearson/" class="uri">https://njoselson.github.io/Fisher-Pearson/</a></p></li>
 </ol></li>
 <li><p><strong>Assignment 4</strong> (Due April 23)</p></li>
-<li><p><strong>Project Proposal</strong> (Due April 23, 11:59pm)</p></li>
+<li><p><strong><a href="./assignments/course_project.html">Project Proposal</a></strong> (Due April 23, 11:59pm)</p></li>
 </ol>
 </div>
 <div id="resources-4" class="section level3">
@@ -674,8 +674,8 @@ Last Updated: 2019-04-09</div></em></h4>
 <ol style="list-style-type: decimal">
 <li><p><strong>Required Reading</strong></p></li>
 <li><p><strong>Assignment 6</strong> (Due May 7)</p></li>
-<li><p>Start working on <strong>Project Report</strong> (Due May 17, 11:59pm)</p></li>
-<li><p>Start working on <strong>Project Presentation</strong> (Due week of May 13)</p></li>
+<li><p>Start working on <strong><a href="./assignments/course_project.html">Project Report</a></strong> (Due May 17, 11:59pm)</p></li>
+<li><p>Start working on <strong><a href="./assignments/course_project.html">Project Presentation</a></strong> (Due week of May 13)</p></li>
 </ol>
 </div>
 <div id="resources-6" class="section level3">
@@ -712,8 +712,8 @@ Last Updated: 2019-04-09</div></em></h4>
 </ol>
 <!-- end of list -->
 <ol style="list-style-type: decimal">
-<li><p><strong>Project Report</strong> (Due May 17, 11:59pm)</p></li>
-<li><p><strong>Project Presentation</strong> (Due week of May 13)</p></li>
+<li><p><strong><a href="./assignments/course_project.html">Project Report</a></strong> (Due May 17, 11:59pm)</p></li>
+<li><p><strong><a href="./assignments/course_project.html">Project Presentation</a></strong> (Due week of May 13)</p></li>
 </ol>
 </div>
 <div id="resources-7" class="section level3">
@@ -726,7 +726,9 @@ Last Updated: 2019-04-09</div></em></h4>
 <p>Text Mining, Scraping, and Sentiment Analysis</p>
 <p><strong>Reproducible Research</strong></p>
 <ul>
-<li>rOpenSci. Reproducibility in science. Available: <a href="https://ropensci.github.io/reproducibility-guide/" class="uri">https://ropensci.github.io/reproducibility-guide/</a></li>
+<li><p>rOpenSci. Reproducibility in science. Available: <a href="https://ropensci.github.io/reproducibility-guide/" class="uri">https://ropensci.github.io/reproducibility-guide/</a></p></li>
+<li><p>Hartgerink, C. (2017). Composing reproducible manuscripts using R Markdown. Available: <a href="https://elifesciences.org/labs/cad57bcf/composing-reproducible-manuscripts-using-r-markdown" class="uri">https://elifesciences.org/labs/cad57bcf/composing-reproducible-manuscripts-using-r-markdown</a></p></li>
+<li><p>Lowndes, J. S. S., et al. (2017). Our path to better science in less time using open data science tools. Nature Ecology &amp; Evolution, 1(6), 0160. doi: <a href="https://doi.org/10.1038/s41559-017-0160">10.1038/s41559-017-0160</a></p></li>
 </ul>
 <p><strong>Science Communication</strong></p>
 <ul>
