--- a/nr592/lectures/lecture04.html
+++ b/nr592/lectures/lecture04.html
@@ -228,7 +228,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore"><div style="white-space: pre-line;"> 
 Importing, working with, and exploring data
-Week 2, Lecture 04:</div></h1>
+Week 2, Lecture 04</div></h1>
 <h4 class="author"><em><div style="white-space: pre-line;"> 
 Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
