--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -583,8 +583,12 @@ Last Updated: 2019-04-11</div></em></h4>
 <div id="lectures-3" class="section level3">
 <h3>Lectures</h3>
 <ul>
-<li><p>Tuesday, April 16: <strong>Lecture 07</strong> (pdf / Rmd)</p></li>
-<li><p>Thursday, April 18: <strong>Lecture 08</strong> (pdf / Rmd)</p></li>
+<li>Tuesday, April 16: <strong><a href="./lectures/lecture07.html">Lecture 07</a></strong> (<a href="./lectures/lecture07.pdf">pdf</a> / <a href="./lectures/lecture07.Rmd">Rmd</a>)
+<ul>
+<li><a href="http://esapubs.org/archive/ecol/E090/184/">PanTHERIA data</a> (“WR05”)<br />
+</li>
+</ul></li>
+<li>Thursday, April 18: <strong>Lecture 08</strong> (pdf / Rmd)</li>
 </ul>
 </div>
 <div id="homework-4" class="section level3">
