Update Lecture 7, add Assignment 4, remove Assignment 6 from Syllabus

--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -385,7 +385,7 @@ Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
  
-Last Updated: 2019-04-11</div></em></h4>
+Last Updated: 2019-04-16</div></em></h4>
 
 </div>
 
@@ -604,7 +604,7 @@ Last Updated: 2019-04-11</div></em></h4>
 </ul></li>
 <li><p>Joselson, N. (2016). Eugenics and statistics, discussing Karl Pearson and R. A. Fisher. Available: <a href="https://njoselson.github.io/Fisher-Pearson/" class="uri">https://njoselson.github.io/Fisher-Pearson/</a></p></li>
 </ol></li>
-<li><p><strong>Assignment 4</strong> (Due April 23)</p></li>
+<li><p><strong><a href="./assignments/assignment4.html">Assignment 4</a></strong> (<a href="./assignments/assignment4.pdf">pdf</a> / <a href="./assignments/assignment4.Rmd">Rmd</a>) (Due April 23)</p></li>
 <li><p><strong><a href="./assignments/course_project.html">Project Proposal</a></strong> (Due April 23, 11:59pm)</p></li>
 </ol>
 </div>
@@ -632,6 +632,7 @@ Last Updated: 2019-04-11</div></em></h4>
 <ul>
 <li><p>Aschwanden, C. (2015). Science isn’t broken. FiveThirtyEight. Available: <a href="https://fivethirtyeight.com/features/science-isnt-broken/" class="uri">https://fivethirtyeight.com/features/science-isnt-broken/</a></p></li>
 <li><p>Angwin, J., et al. (2016). Machine bias. ProPublica. Available: <a href="https://www.propublica.org/article/machine-bias-risk-assessments-in-criminal-sentencing" class="uri">https://www.propublica.org/article/machine-bias-risk-assessments-in-criminal-sentencing</a></p></li>
+<li><p>Lum, K., &amp; Isaac, W. (2016). To predict and serve?. Significance, 13(5), 14-19. doi: <a href="https://rss.onlinelibrary.wiley.com/doi/full/10.1111/j.1740-9713.2016.00960.x">10.1111/j.1740-9713.2016.00960.x</a></p></li>
 <li><p>Rodriguez-Lonebear, D. (2016). Chapter 14: Building a data revolution in Indian country. In Kukutai, T., &amp; Taylor, J. (Eds.), <em>Indigenous data sovereignty</em> (pp. 253-272). Available: <a href="http://press-files.anu.edu.au/downloads/press/n2140/pdf/ch14.pdf" class="uri">http://press-files.anu.edu.au/downloads/press/n2140/pdf/ch14.pdf</a></p></li>
 </ul>
 <p><br></p>
@@ -680,7 +681,6 @@ Last Updated: 2019-04-11</div></em></h4>
 <h3>Homework</h3>
 <ol style="list-style-type: decimal">
 <li><p><strong>Required Reading</strong></p></li>
-<li><p><strong>Assignment 6</strong> (Due May 7)</p></li>
 <li><p>Start working on <strong><a href="./assignments/course_project.html">Project Report</a></strong> (Due May 17, 11:59pm)</p></li>
 <li><p>Start working on <strong><a href="./assignments/course_project.html">Project Presentation</a></strong> (Due week of May 13)</p></li>
 </ol>
@@ -713,12 +713,10 @@ Last Updated: 2019-04-11</div></em></h4>
 <h3>Homework</h3>
 <ol style="list-style-type: decimal">
 <li><p><strong>Required Reading</strong></p>
-<ol style="list-style-type: lower-alpha">
-<li>rOpenSci. Introduction. In <em>Reproducibility in science</em>. Available: <a href="https://ropensci.github.io/reproducibility-guide/sections/introduction/" class="uri">https://ropensci.github.io/reproducibility-guide/sections/introduction/</a></li>
-</ol></li>
+<p>None</p></li>
 </ol>
 <!-- end of list -->
-<ol style="list-style-type: decimal">
+<ol start="2" style="list-style-type: decimal">
 <li><p><strong><a href="./assignments/course_project.html">Project Report</a></strong> (Due May 17, 11:59pm)</p></li>
 <li><p><strong><a href="./assignments/course_project.html">Project Presentation</a></strong> (Due week of May 13)</p></li>
 </ol>
