--- a/nr592/schedule_spring2019.html
+++ b/nr592/schedule_spring2019.html
@@ -385,7 +385,7 @@ Richard E.W. Berl</div></em></h4>
 <h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
  
  
-Last Updated: 2019-04-17</div></em></h4>
+Last Updated: 2019-04-23</div></em></h4>
 
 </div>
 
@@ -652,31 +652,47 @@ Last Updated: 2019-04-17</div></em></h4>
 <div id="lectures-4" class="section level3">
 <h3>Lectures</h3>
 <ul>
-<li><p>Tuesday, April 23: <strong>Lecture 09</strong> (pdf / Rmd)</p></li>
-<li><p>Thursday, April 25: <strong>Lecture 10</strong> (pdf / Rmd)</p></li>
+<li>Tuesday, April 23: <strong><a href="./lectures/lecture09.html">Lecture 09</a></strong> (<a href="./lectures/lecture09.pdf">pdf</a> / <a href="./lectures/lecture09.Rmd">Rmd</a>)
+<ul>
+<li><a href="http://netapp.audubon.org/CBCObservation/Historical/ResultsByCount.aspx">Christmas Bird Count data</a> (Fort Collins, 1900-2017)<br />
+</li>
+<li><a href="https://www.fs.usda.gov/rds/archive/Product/RDS-2017-0016">Bob Marshall Wilderness Complex visitor data</a><br />
+</li>
+</ul></li>
+<li>Thursday, April 25: <strong>Lecture 10</strong> (pdf / Rmd)</li>
 </ul>
 </div>
 <div id="homework-5" class="section level3">
 <h3>Homework</h3>
 <ol style="list-style-type: decimal">
-<li><p><strong>Required Reading</strong></p></li>
+<li><p><strong>Required Reading</strong></p>
+<p>None</p></li>
 <li><p><strong>Assignment 5</strong> <strong>(ATTENTION: Due May 7)</strong></p></li>
 </ol>
 </div>
 <div id="resources-5" class="section level3">
 <h3>Resources</h3>
 <p><strong>Ecological Analyses</strong></p>
-<p>Diversity Indices</p>
-<p><code>diverse</code> package</p>
-<p>Accumulation Curves?</p>
+<ul>
+<li><p>Simpson, G. CRAN Task View: Analysis of Ecological and Environmental Data. Available: <a href="https://cran.r-project.org/web/views/Environmetrics.html" class="uri">https://cran.r-project.org/web/views/Environmetrics.html</a></p></li>
+<li><p>Oksanen, J. Vegan: An introduction to ordination. Available: <a href="https://cran.r-project.org/web/packages/vegan/vignettes/intro-vegan.pdf" class="uri">https://cran.r-project.org/web/packages/vegan/vignettes/intro-vegan.pdf</a></p></li>
+<li><p>Guevara, M. R., et al. (2016). diverse: An R Package to analyze diversity in complex systems. The R Journal, 8(2), 60-78. doi: <a href="https://journal.r-project.org/archive/2016/RJ-2016-033/RJ-2016-033.pdf">10.32614/rj-2016-033</a></p></li>
+</ul>
 <p><strong>Ordinal Data</strong></p>
-<p>Likert-type Scales</p>
-<p>When to treat ordinal as continuous</p>
+<ul>
+<li><p>Mangiafico, S. S. Introduction to Likert data. In <em>Summary and analysis of extension program evaluation in R</em>. Available: <a href="http://rcompanion.org/handbook/E_01.html" class="uri">http://rcompanion.org/handbook/E_01.html</a></p></li>
+<li><p>Barry, D. Do not use averages with Likert scale data. Available: <a href="https://bookdown.org/Rmadillo/likert/" class="uri">https://bookdown.org/Rmadillo/likert/</a></p></li>
+<li><p>Mangiafico, S. S. One-way permutation test of independence for ordinal data. In <em>Summary and analysis of extension program evaluation in R</em>. Available: <a href="http://rcompanion.org/handbook/K_02.html" class="uri">http://rcompanion.org/handbook/K_02.html</a></p></li>
+<li><p>Holgado–Tello, F. P., et al. (2010). Polychoric versus Pearson correlations in exploratory and confirmatory factor analysis of ordinal variables. Quality &amp; Quantity, 44(1), 153. doi: <a href="https://doi.org/10.1007/s11135-008-9190-y">10.1007/s11135-008-9190-y</a></p></li>
+<li><p>Rhemtulla, M., et al. (2012). When can categorical variables be treated as continuous? A comparison of robust continuous and categorical SEM estimation methods under suboptimal conditions. Psychological Methods, 17(3), 354. doi: <a href="https://doi.org/10.1037/a0029315">10.1037/a0029315</a></p></li>
+</ul>
 <p><strong>Dimensionality Reduction</strong></p>
+<p>Hierarchical Clustering</p>
 <p>Multidimensional Scaling (Classical and Nonmetric)</p>
 <p>Principal Component Analysis</p>
-<p>Exploratory Factor Analysis</p>
 <p>Cluster Analysis</p>
+<p>Exploratory Factor Analysis</p>
+<p>Mantel Tests?</p>
 <p><br></p>
 </div>
 </div>
