--- a/nr592/syllabus_spring2019.html
+++ b/nr592/syllabus_spring2019.html
@@ -397,7 +397,7 @@ Last Updated: 2019-04-16
 NR 592, Section 1: Seminar in Natural Resources (1 credit)</p>
 <p><strong>Instructor</strong><br />
 Richard E.W. Berl, Human Dimensions of Natural Resources<br />
-<em>(He/Him)</em><br />
+<em>(He/Him/His)</em><br />
 Forestry 201<br />
 <a href="mailto:rewberl@colostate.edu">rewberl@colostate.edu</a><br />
 <a href="https://rewberl.github.io">rewberl.github.io</a></p>
